# CMakeProjectExample

./: CMakeLists.txt  README.md  runCMake.sh
docs/: example_test_output.html
docs/exmamples/: ctestResultExample.html  gtestResultExample.html
docs/md/: CMakeTutorial.md  GTestTutorial.md
docs/style/: googleTestStyleSheet.xsl
include/: myFunction.h
scripts/: runCMake.sh  runCTest.sh  runGTest.sh  runGTestWithOutput.sh
src/: CMakeLists.txt  main.cpp  myClass.cpp  myClass.h  myFunction.cpp
test/: CMakeLists.txt  test_class_main.cpp  test_function_main.cpp
